fixes table misalignment and removes the need for a no break space which causes unexpected overflow.

--- a/client/static/styles.css
+++ b/client/static/styles.css
@@ -232,6 +232,7 @@ td select {
   table {
     border-collapse: collapse;
     width: 100%;
+    table-layout: fixed;
   }
   
   td, th {
